fix: #2505 missing border on select component

--- a/src/components/styled/select.css
+++ b/src/components/styled/select.css
@@ -1,5 +1,4 @@
-.select,
-:where(select.select) {
+.select {
   @apply bg-base-100 rounded-btn border border-transparent pr-10;
   &-bordered {
     @apply border-base-content/20;
